[package]
name = "wasm-canvas"
version = "0.1.0"
authors = ["nabezokodaikon <nabezoko.daikon@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
web-sys = "0.3.51"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
